生成ddd微服务架构的项目脚手架.